--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <nav id="footer">
   <div class="container">
     <div class="pull-left fnav">
-      <p>Copyright &copy; 2017 作者：Atgui. 专注于H5游戏开发 <a style='color:#F4D03F' href="#" target="_blank" title="">科技</a> · 
+      <p>Copyright &copy; 2019 作者：Atgui. 专注于H5游戏开发 专注于H5游戏开发 专注于H5游戏开发 <a style='color:#F4D03F' href="#" target="_blank" title="">科技</a> · 
 	  <a style='color:#F4D03F' href="#" target="_blank" title="Atgui博客">Atgui个人简历</a> · <a style='color:#F4D03F' target="_blank" href="#">atgui-0000999920000号</a>
 	  </p>
 	  <script>
