--- a/index.html
+++ b/index.html
@@ -6,24 +6,15 @@
 <title>Atgui简历</title>
 <meta name="description" content="Atgui，H5游戏前端工程师,Android工程师">
 <meta name="keywords" content="Atgui简历,H5游戏前端工程师,Android工程师" />
-<meta name="author" content="个人博客:https://atgui.github.io">
-<!-- Favicons
-    ================================================== -->
+<meta name="author" content="个人博客:www.atgui.vip">
 <link rel="shortcut icon" href="img/favicon_jianli.ico" type="image/x-icon">
-<!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
-<!-- Slider
-    ================================================== -->
 <link href="css/owl.carousel.css" rel="stylesheet" media="screen">
 <link href="css/owl.theme.css" rel="stylesheet" media="screen">
-<!-- Stylesheet
-    ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
 <link rel="stylesheet" type="text/css" href="fonts/sns_fonts/iconfont.css">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -37,7 +28,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-terminal"></i>Atgui简历</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><!--<i class="fa fa-terminal"></i>-->【Atgui简历】</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -77,7 +68,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1><span class="brand-heading">Atgui</span></h1>
-                        <p class="intro-text">H5游戏开发,Android</p>
+                        <p class="intro-text">H5游戏开发</p>
                         <a href="#services" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -100,28 +91,26 @@
         <h4><strong>个人信息</strong></h4>
         <p>
 		英文名: Atgui &nbsp;性别：男</br>
-		年龄: 26岁 求职地：philippines
+		年龄: 26岁
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
         <h4><strong>毕业学校</strong></h4>
         <p>
-		  本科：师东学院</br>
-		  专科：师东学院
+		  贵州师范学院</br>
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-code"></i>
         <h4><strong>专业学历</strong></h4>
         <p>
-		计算机网络技术（专科）</br>
-		计算机科学与技术（本科）</br>
+		计算机科学与技术</br>
 		
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
         <h4><strong>联系方式</strong></h4>
         <p>QQ：993094914</br>
-		  邮箱：atgui@gmail.com</p>
+		  邮箱：993094914@gmail.com</p>
       </div>
     </div>
   </div>
@@ -142,11 +131,11 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="#" target='_blank' title="H5游戏的开发">H5游戏的开发</a></h4>
-                <small>H5游戏的开发</small>
+                <h4>小小冒险队</h4>
+                <small></small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/03.jpg" class="img-responsive" alt="H5游戏的开发"></div>
+              <img src="img/portfolio/03.jpg" class="img-responsive" alt="H5游戏开发"></div>
           </div>
         </div>
 
@@ -154,22 +143,22 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="#" target='_blank' title="H5游戏的开发">H5游戏的开发</a></h4>
-                <small>H5游戏的开发</small>
+                <h4>百人牛牛</h4>
+                <small>Layabox+fairygui</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/06.jpg" class="img-responsive" alt="H5游戏的开发"></div>
+              <img src="img/portfolio/06.jpg" class="img-responsive" alt="H5游戏开发"></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding app web">
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="#" target='_blank' title="H5游戏的开发">H5游戏的开发</a></h4>
-                <small>H5游戏的开发</small>
+                <h4>棱哈</h4>
+                <small>Layabox+fairygui</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
-              <img src="img/portfolio/07.jpg" class="img-responsive" alt="H5游戏的开发"></div>
+              <img src="img/portfolio/07.jpg" class="img-responsive" alt="H5游戏开发"></div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web app">
@@ -177,12 +166,12 @@
 		  
             <div class="hover-bg"> 
               <div class="hover-text">
-                <h4><a href="#"target='_blank' title="H5游戏的开发">H5游戏的开发</a></h4>
-                <small>H5游戏的开发</small>
+                <h4>德州</h4>
+                <small>Layabox+fairygui</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> 
 				</div>
-              <img src="img/portfolio/08.jpg" class="img-responsive" alt="H5游戏的开发">
+              <img src="img/portfolio/08.jpg" class="img-responsive" alt="H5游戏开发">
 		    </div>
           </div>
         </div>
@@ -202,12 +191,12 @@
       <div class="col-md-6">
         <div class="about-text"> <i class="fa fa-users"></i>
           <div class="padding-left"><h4>PC端</h4>
-          <p>熟练使用HTML/CSS技术，精通Javascript/jquery编程,能够熟练使用vue等前端框架进行模块开发，熟练的使用webpack，webpack等前端工具，了解typescript等前端新技术</p></div>
+          <p>熟练使用HTML/CSS/Javascript编程,熟悉webpack分包，熟悉typescript等前端新技术</p></div>
           <i class="fa fa-magic"></i>
           <div class="padding-left"><h4>移动端</h4>
-          <p>熟练使用android studio进行移动页面的开发，H5游戏的开发.</p></div>
+          <p>熟练使用android studio进行移动页面的开发，Layabox 开发H5游戏.</p></div>
           <i class="fa fa-check-square-o"></i>
-          <div class="padding-left"><h4>H5游戏的开发</h4>
+          <div class="padding-left"><h4>H5游戏开发</h4>
           <p>熟练使用Layabox，Egret 等引擎开发H5游戏</p></div>
         </div>
       </div>
@@ -241,7 +230,7 @@
 					<div class="col-md-3 col-sm-3">
 						<div class="achivement-box">
 							<i class="fa fa-trophy"></i>
-							<span class="count">20+</span>
+							<span class="count">10</span>
 							<h4>项目数量</h4>                            
 						</div>
 					</div> 
@@ -257,13 +246,21 @@
       <p>热爱互联网，热爱技术，专注于游戏开发</p>
     </div>
     <div id="row">
-	
+	<div class="col-md-3 col-sm-6">
+        <div class="thumbnail"> <img src="img/team/03.jpg" alt="师东学院" class="img-circle team-img">
+          <div class="caption">
+            <h3>北大青鸟</h3>
+            <p>Java,C#,HTML,Javascript,MySql...</p>
+            <p>培训经历</p>
+          </div>
+        </div>
+      </div>
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail"> <img src="img/team/01.jpg" alt="师东学院" class="img-circle team-img">
           <div class="caption">
-            <h3>QQ</h3>
-            <p>游戏开发</p>
-            <p>从事前端优化、主要用到HTMl，CSS，JS技术，游戏开发</p>
+            <h3>Egret</h3>
+            <p>H5游戏开发</p>
+            <p>2016.10-2018.05 从事前端egret游戏开发,踏入游戏开发第一步</p>
           </div>
         </div>
       </div>  
@@ -271,27 +268,19 @@
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail"> <img src="img/team/02.jpg" alt="师东学院" class="img-circle team-img">
           <div class="caption">
-            <h3>QQ</h3>
-            <p>游戏开发</p>
-            <p>工作时间：2013.4-2015.8，游戏开发</p>
+            <h3>Android</h3>
+            <p>视频App播放器</p>
+            <p>2018.5-2019.5,安卓移动 app 开发</p>
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6">
+      
+	  	<div class="col-md-3 col-sm-6">
         <div class="thumbnail"> <img src="img/team/03.jpg" alt="师东学院" class="img-circle team-img">
           <div class="caption">
-            <h3>QQ</h3>
-            <p>游戏开发</p>
-            <p>工作时间：2015.8-2016.7，包括：游戏开发</p>
-          </div>
-        </div>
-      </div>
-	  	<div class="col-md-3 col-sm-6">
-        <div class="thumbnail"> <img src="img/team/04.jpg" alt="师东学院" class="img-circle team-img">
-          <div class="caption">
-            <h3>QQ</h3>
-            <p>游戏开发</p>
-            <p>2016.7-至今，主要从事金税三期第二阶段第二包的相关工作，包括游戏开发等</p>
+            <h3>LayaBox</h3>
+            <p>H5游戏开发</p>
+            <p>2019.5-至今，游戏前端开发</p>
           </div>
         </div>
       </div>
@@ -337,10 +326,10 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>北京路</p>
+        <p>北京路（肯定找不到）.</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-        <p>atgui@gmail.com</p>
+        <p>993094914@gmail.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
         <p>QQ:993094914</p>
@@ -354,17 +343,9 @@
 <nav id="footer">
   <div class="container">
     <div class="pull-left fnav">
-      <p>Copyright &copy; 2019 作者：Atgui. 专注于H5游戏开发 专注于H5游戏开发 专注于H5游戏开发 <a style='color:#F4D03F' href="#" target="_blank" title="">科技</a> · 
-	  <a style='color:#F4D03F' href="#" target="_blank" title="Atgui博客">Atgui个人简历</a> · <a style='color:#F4D03F' target="_blank" href="#">atgui-0000999920000号</a>
+      <p>Copyright &copy; 2019 作者：Atgui. 专注于H5游戏开发  <a href="#">Atgui个人简历</a><a style='color:#F4D03F' target="_blank" href="#">atgui</a>
 	  </p>
 	  <script>
-//var _hmt = _hmt || [];
-//(function() {
-//  var hm = document.createElement("script");
-//  hm.src = "https://hm.baidu.com/hm.js?627bf218b26b5680ee108244d5c6fe15";
-//  var s = document.getElementsByTagName("script")[0]; 
-//  s.parentNode.insertBefore(hm, s);模  http://lineme.net/    https://www.mazefeng.com/#services
-//})();
 </script>
     </div>
 	<!--music-->
@@ -375,11 +356,11 @@
 <!--music-->
     <div class="pull-right fnav">
       <ul class="footer-social">
-	    <li><a href="#"><i class="icon iconfont">&#xe66e;</i></a></li>
-        <li><a href="#"> <i class="icon iconfont">&#xe629;</i></a></li>
-        <li><a href="#"> <i class="icon iconfont">&#xe616;</i></a></li>
+	    <!--<li><a href="#"><i class="icon iconfont">&#xe66e;</i></a></li>-->
+        <li><a taget="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=993094914&site=qq&menu=yes"> <i class="icon iconfont">&#xe629;</i></a></li>
+        <!--<li><a href="#"> <i class="icon iconfont">&#xe616;</i></a></li>-->
 
-        <li><a href="#"><i class="icon iconfont">&#xe66b;</i></a></li>
+        <!--<li><a href="#"><i class="icon iconfont">&#xe66b;</i></a></li>-->
       </ul>
     </div>
   </div>
