--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
         <h4><strong>联系方式</strong></h4>
         <p>QQ：993094914</br>
-		  邮箱：993094914@gmail.com</p>
+		  邮箱：993094914@qq.com</p>
       </div>
     </div>
   </div>
@@ -326,10 +326,10 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>北京路（肯定找不到）.</p>
+        <p>北京路旁</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-        <p>993094914@gmail.com</p>
+        <p>993094914@qq.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
         <p>QQ:993094914</p>
