--- a/index.html
+++ b/index.html
@@ -392,6 +392,8 @@ if (u.indexOf('Android') > -1 || u.indexOf('Linux') > -1||u.indexOf('iPhone') > 
 } 
     
  });
+ 
 </script>
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1278558887'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/z_stat.php%3Fid%3D1278558887' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
