--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
-    <script type="module" crossorigin src="/assets/index.b0cd5e5f.js"></script>
+    <script type="module" crossorigin src="/assets/index.db43cd72.js"></script>
     <link rel="stylesheet" href="/assets/index.25ebe12e.css">
   </head>
   <body>
